Refactor SchemaChange logic to be more intuitive. Fix bug where missing Schema info would throw an exception instead of returning null. Pre-cache Use Lombok many places. Cleanup unit tests. Refactor redundant formatting for log messages.